desktop commit with link styled

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
      </div>
      <div class="terms">
        <a href="#">Terms</a>
-       <a href="#">Privacy</a>
+       <a class=privacy href="#">Privacy</a>
      </div>
 
    </footer>
