--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class=logo1>COLMAR</div>
         <div class=logo2>ACADEMY</div>
       </div>
-    <div class=nav>
+      <div class=nav>
         <nav>
           <a href="#">On campus</a>
           <a href="#">Online</a>
@@ -22,6 +22,12 @@
           <a href="#">Sign in</a>
         </nav>
       </div>
+      <nav class="mobile">
+        <a href="#"> <img src="resources/images/ic-logo.svg"> </a>
+        <a href="#"><img src="./resources/images/ic-on-campus.svg"></a>
+        <a href="#"><img src="./resources/images/ic-online.svg"></a>
+        <a href="#"><img src="./resources/images/ic-login.svg"></a>
+      </nav>
    </div>
 
    <div class="banner">
@@ -49,7 +55,8 @@
      </div>
      <div class=column>
       <div id=orientation class="orientation">
-        <img src="resources/images/information-orientation.jpg" alt="students on side walk">
+        <img src="resources/images/information-orientation.jpg" alt="students on side walk" class=imgdesktop>
+        <img src="resources/images/information-orientation-mobile.jpg" class=imgmobile>
         <div class=text>
           <h3>Orientation date</h3>
           <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -57,7 +64,8 @@
         </div>
       </div>
       <div class="campus">
-        <img src="resources/images/information-campus.jpg" alt="classroom">
+        <img src="resources/images/information-campus.jpg" alt="classroom" class=imgdesktop>
+        <img src="resources/images/information-campus-mobile.jpg" class=imgmobile>
         <div class=text>
           <h3>Our campus</h3>
           <p>Find which campus is close by you </p>
@@ -65,9 +73,11 @@
         </div>
       </div>
       <div id=guest class="guest">
-        <img src="resources/images/information-guest-lecture.jpg" alt="guest speaker">
+        <img src="resources/images/information-guest-lecture.jpg" alt="guest speaker" class=imgdesktop>
+        <img src="resources/images/information-guest-lecture-mobile.jpg" class=imgmobile>
         <div class=text>
-          <h3>Our guest lecture</h3>
+          <h3 class=titledesk>Our guest lecture</h3>
+          <h3 class=titlemobile>Special guest lecture</h3>
           <p>Join a keynote with Oliver Sack about music in the medical teatment </p>
           <a href="#">Read more</a>
         </div>
@@ -80,6 +90,12 @@
    </div>
 
    <div class="startlearning">
+     <div class=mobilebutton><h3>Software engineering</h3></div>
+     <div class=mobilebutton><h3>Computer art</h3></div>
+     <div class=mobilebutton><h3>Design</h3></div>
+     <div class=mobilebutton><h3>Data</h3></div>
+     <div class=mobilebutton><h3>Business</h3></div>
+     <div class=mobilebutton><h3>Marketing</h3></div>
      <div class=gallery class="software">
        <img src="resources/images/course-software.jpg" alt="computers">
        <div class=desc>
@@ -131,7 +147,7 @@
      </div>
    </div>
 
-   <div class="title">
+   <div class="title" id=exhibit>
      <h2>Thesis exhibit</h2>
    </div>
 
