--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
    </div>
 
-   <div class="title">
+   <div class="title" id=start>
      <h2>Start Learning</h2>
    </div>
 
@@ -182,13 +182,16 @@
    </div>
 
    <footer>
-     <div class="copyright">
-       <p>© Colmar Academy. All rights reserved</p>
+     <div class=deskfooter>
+       <div class="copyright">
+         <p>© Colmar Academy. All rights reserved</p>
+       </div>
+       <div class="terms">
+         <a href="#">Terms</a>
+         <a class=privacy href="#">Privacy</a>
+       </div>
      </div>
-     <div class="terms">
-       <a href="#">Terms</a>
-       <a class=privacy href="#">Privacy</a>
-     </div>
+     <div class="mobilefooter"> <a href="#">© 2016 Colmar Academy. All rights reserved</a><a href="#">Terms</a> <a href="#">Privacy</a> </div>
 
    </footer>
 
